force-app/main/default/objects/Student__c/fields/Email_Of_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Email_Of_Teacher__c</fullName>
    <label>Email Of Teacher</label>
    <type>Email</type>
</CustomField>