force-app/main/default/objects/Student__c/fields/Name_Of_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Teacher__c</fullName>
    <label>Name Of Teacher</label>
    <length>30</length>
    <type>Text</type>
</CustomField>