force-app/main/default/objects/Student__c/fields/SMS_to_parents__c.field-meta.xml
<CustomField>
    <fullName>SMS_to_parents__c</fullName>
    <label>SMS to parents</label>
    <length>50</length>
    <type>Text</type>
</CustomField>